# JAC

./: .env.example  .gitignore  Cargo.toml  README.md  docker-compose.yml
app/jac-desk-client/: Cargo.toml  tauri.conf.json
app/jac-desk-client/src/: lib.rs  logger.rs  main.rs  system_info.rs  tauri_commands.rs
app/jac-desk-client/src/models/: mod.rs  process.rs  user.rs
app/jac-desk-client/src/service/: api_client.rs  mod.rs  process_service.rs  state.rs
app/jac-desk-client/src/service/scheduled/: mod.rs  scheduled.rs
app/jac-desk-client/src/ui/: index.html
app/jac-desk-client/src/ui/script/: app.js
app/jac-desk-client/src/ui/style/: styles.css
backend/jac/jac/: .dockerignore  Dockerfile  README.md  build.gradle.kts  settings.gradle.kts
backend/jac/jac/src/main/resources/: application.yaml
frontend/jac-frontend/: .dockerignore  Dockerfile  jest.config.ts  package-lock.json  package.json  tsconfig.test.json
frontend/jac-frontend/app/: globals.css  layout.tsx  page.tsx
frontend/jac-frontend/src/entities/alert/: index.ts
frontend/jac-frontend/src/entities/client/: index.ts
frontend/jac-frontend/src/entities/forbidden-process/: index.ts
frontend/jac-frontend/src/entities/process-event/: index.ts
frontend/jac-frontend/src/features/alerts/: index.ts
frontend/jac-frontend/src/features/alerts/__tests__/: useAlerts.test.ts
frontend/jac-frontend/src/features/auth/: index.tsx
frontend/jac-frontend/src/features/auth/__tests__/: useAuth.test.ts
frontend/jac-frontend/src/features/clients/: index.ts
frontend/jac-frontend/src/features/realtime/: index.ts
frontend/jac-frontend/src/features/rules/: index.ts
frontend/jac-frontend/src/shared/api/: client.ts
frontend/jac-frontend/src/shared/config/: index.ts
frontend/jac-frontend/src/shared/types/: index.ts
frontend/jac-frontend/src/widgets/agent-drawer/: index.tsx
frontend/jac-frontend/src/widgets/agents-monitor/: index.tsx
frontend/jac-frontend/src/widgets/dashboard/: index.tsx
frontend/jac-frontend/src/widgets/events-log/: index.tsx
frontend/jac-frontend/src/widgets/header/: index.tsx
frontend/jac-frontend/src/widgets/rules-manager/: index.tsx
frontend/jac-frontend/src/widgets/sidebar/: index.tsx
nginx/: nginx.conf
src/: client.rs  main.rs  server.rs
(+44 files in other folders)
