[package]
name = "JAC"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sysinfo = "0.30.5"
reqwest = { version = "0.11.4", features = ["json"] }
serde_json = "1.0.111"
tokio = { version = "1", features = ["full"] }
eframe = "0.13.0"
egui = "0.13.0"