[package]
name = "jac-desk-client"
version = "0.1.0"
edition = "2024"

[dependencies]
tauri = "2.11.1"
serde = "1.0.228"
serde_json = "1.0.149"
reqwest = "0.13.3"
tokio = { version = "1.52.3", features = ["full"] }
tracing = "0.1.44"
tracing-subscriber = "0.3.23"
uuid = { version = "1.23.1", features = ["v4", "serde"] }
sysinfo = "0.39.1"

[dev-dependencies]
mockito = "1.7.2"
pretty_assertions = "1.4.1"
tokio-test = "0.4.5"
