[package]
name = "jac-desk-client"
version = "0.1.0"
edition = "2024"

[dependencies]
tauri = "2.11.1"
serde = "1.0.228"
serde_json = "1.0.149"
reqwest = { version = "0.13.3", features = ["json"] }
tokio = { version = "1.52.3", features = ["full"] }
tracing = "0.1.44"
chrono = { version = "0.4.40", features = ["serde"] }
tracing-subscriber = "0.3.23"
uuid = { version = "1.23.1", features = ["v4", "serde"] }
sysinfo = "0.39.1"

[dev-dependencies]
mockito = "1.7.2"
pretty_assertions = "1.4.1"
tokio-test = "0.4.5"
