[package]
name = "jac-desk-client"
version = "0.1.0"
edition = "2021"

[dependencies]
tauri = { version = "2.11.1", features = ["custom-protocol", "tray-icon", "tracing"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
reqwest = { version = "0.13.3", features = ["json"] }
tokio = { version = "1.52.3", features = ["full"] }
tracing = "0.1.44"
chrono = { version = "0.4.40", features = ["serde"] }
tracing-subscriber = { version = "0.3.23", features = ["env-filter", "json", "fmt"] }
uuid = { version = "1.23.1", features = ["v4", "serde"] }
sysinfo = "0.39.1"
whoami = "1.5.0"
anyhow = "1.0"
dirs = "5.0"

[dev-dependencies]
mockito = "1.7.2"
pretty_assertions = "1.4.1"
tokio-test = "0.4.5"

[build-dependencies]
tauri-build = { version = "2.6", features = [] }

